# real-state

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: cloud_manager.py  scraper.py  transformer.py
terraform/: dev.tfvars.example  iam.tf  locals.tf  output.tf  providers.tf  random_string.tf  s3.tf  variables.tf
